--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
 
   dio: ^4.0.4
   file_picker: ^4.3.0
+  flutter_svg: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -61,9 +62,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-assets:
-  - images/twitter.png
-  # - images/a_dot_ham.jpeg
+  assets:
+  # - images/twitter.png
+  - images/etts.png
+  - images/ETSLOGO.svg
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
